--- a/payments.html
+++ b/payments.html
@@ -1,39 +1,48 @@
-<head>
-  <link rel="stylesheet" href="styles/components.css">
-</head>
-<banner-2>
-  <container>
+</html>
+  <head>
+    <meta charset='UTF-8'>
     <title>Payments</title>
-    <subtitle>Choose one of the payment options below to pay for Troop 370 events</subtitle>
-  </container>
-</banner-2>
-<content-strip-2>
-  <container>
-    <title>Venmo</title>
-    <p>PREFERRED PAYMENT METHOD<br><br>You can make camping and high adventure payments using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, you must include SCOUT NAME and EVENT NAME with your payment in the "What's it for?" section.<br><br>Click here to sign up and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can search for us @Troop-ThreeSeventy<br><br>Credit card payments will incur merchant fees.</p>
-    <buttonrow>
-      <a href="https://venmo.com/troop-threeseventy" type="button" varient="dark">View Troop 370 on Venmo</a>
-      <a href="https://itunes.apple.com/us/app/venmo/id351727428?mt=8" type="button" varient="dark">Venmo for iOS</a>
-      <a href="https://play.google.com/store/apps/details?id=com.venmo" type="button" varient="dark">Venmo for Android</a>
-    </buttonrow>
-  </container>
-</content-strip-2>
-<content-strip-2>
-  <container>
-    <title>PayPal</title>
-    <p>Use the "Friends & Family" transfer option to make payments without merchant fees. This option is available only if your Paypal and bank account are connected. Credit card payments will incur merchant fees.<br><br>Send money via Paypal to troop370treasurer@gmail.com and include SCOUT NAME and EVENT NAME with your payment.<br><br>If you are paying for multiple campers or events, please pay for them in separate Paypal transactions, NOT in a single payment. Otherwise, you risk not getting credited for some campers.</p>
-    <buttonrow>
-      <a href="https://www.paypal.com/myaccount/transfer/send" type="button" varient="dark">Pay using PayPal</a>
-    </buttonrow>
-  </container>
-</content-strip-2>
-<content-strip-2>
-  <container>
-    <title>Cash, Check, or Money Order</title>
-    <p>Hand-deliver these payment types to the Trip Captain or the Scoutmaster, preferably at the weekly Wednesday meetings. The current Trip Captain is listed on the sign-up form for the monthly campout.</p>
-    <buttonrow>
-      <a href="https://www.troop370atlanta.org/" type="button" varient="dark">Weekly meeting details</a>
-      <a href="https://www.troop370atlanta.org/campout-sign-up" type="button" varient="dark">Monthly campout</a>
-    </buttonrow>
-  </container>
-</content-strip-2>
+    <link rel='stylesheet' href='styles/components.css'>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
+  </head>
+  <body>
+
+    <banner-2>
+      <container>
+        <heading>Payments</heading>
+        <subtitle>Choose one of the payment options below to pay for Troop 370 events</subtitle>
+      </container>
+    </banner-2>
+    <content-strip-2>
+      <container>
+        <heading>Venmo</heading>
+        <p>PREFERRED PAYMENT METHOD<br><br>You can make camping and high adventure payments using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, you must include SCOUT NAME and EVENT NAME with your payment in the 'What's it for?' section.<br><br>Click here to sign up and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can search for us @Troop-ThreeSeventy<br><br>Credit card payments will incur merchant fees.</p>
+        <buttonrow>
+          <a href='https://venmo.com/troop-threeseventy' type='button' varient='dark'>View Troop 370 on Venmo</a>
+          <a href='https://itunes.apple.com/us/app/venmo/id351727428?mt=8' type='button' varient='dark'>Venmo for iOS</a>
+          <a href='https://play.google.com/store/apps/details?id=com.venmo' type='button' varient='dark'>Venmo for Android</a>
+        </buttonrow>
+      </container>
+    </content-strip-2>
+    <content-strip-2>
+      <container>
+        <heading>PayPal</heading>
+        <p>Use the 'Friends & Family' transfer option to make payments without merchant fees. This option is available only if your Paypal and bank account are connected. Credit card payments will incur merchant fees.<br><br>Send money via Paypal to troop370treasurer@gmail.com and include SCOUT NAME and EVENT NAME with your payment.<br><br>If you are paying for multiple campers or events, please pay for them in separate Paypal transactions, NOT in a single payment. Otherwise, you risk not getting credited for some campers.</p>
+        <buttonrow>
+          <a href='https://www.paypal.com/myaccount/transfer/send' type='button' varient='dark'>Pay using PayPal</a>
+        </buttonrow>
+      </container>
+    </content-strip-2>
+    <content-strip-2>
+      <container>
+        <heading>Cash, Check, or Money Order</heading>
+        <p>Hand-deliver these payment types to the Trip Captain or the Scoutmaster, preferably at the weekly Wednesday meetings. The current Trip Captain is listed on the sign-up form for the monthly campout.</p>
+        <buttonrow>
+          <a href='https://www.troop370atlanta.org/' type='button' varient='dark'>Weekly meeting details</a>
+          <a href='https://www.troop370atlanta.org/campout-sign-up' type='button' varient='dark'>Monthly campout</a>
+        </buttonrow>
+      </container>
+    </content-strip-2>
+  </body>
+</html>
