--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -1,40 +1,90 @@
-<head>
-  <link rel="stylesheet" href="components.css">
-</head>
-<banner-1>
-  <container>
-    <title>Banner (type 1) - title</title>
-  </container>
-</banner-1>
-<spacer10></spacer10>
-<banner-2>
-  <container>
-    <title>Banner (type 2) - title</title>
-    <subtitle>subtitle</subtitle>
-  </container>
-</banner-2>
-<spacer10></spacer10>
-<banner-3>
-  <container>
-    <title>Banner (type 3) - title</title>
+</html>
+  <head>
+    <title>Content Test Page</title>
+    <link rel="stylesheet" href="components.css">
+  </head>
+  <body>
+    <titlebar>
+      <container>
+        <heading>Site heading</heading>
+      </container>
+    </titlebar>
+    <topnav>
+      <container>
+        <ul>
+          <li><a href="#home" id="home">Home</a></li>
+          <li><a href="#news" id="news">News</a></li>
+          <li class="dropdown">
+            <a href="javascript:void(0)" id="dropdown">Dropdown</a>
+            <dropdown class="dropdown-content">
+              <a href="#dropdown">Link 1</a>
+              <a href="#dropdown">Link 2</a>
+              <a href="#dropdown">Link 3</a>
+            </div>
+          </li>
+        </ul>
+      </container>
+    </topnav>
+    <banner-1>
+      <container>
+        <heading>Banner (type 1) - heading</heading>
+      </container>
+    </banner-1>
+    <spacer10></spacer10>
+    <banner-2>
+      <container>
+        <heading>Banner (type 2) - heading</heading>
+        <subtitle>subtitle</subtitle>
+      </container>
+    </banner-2>
+    <spacer10></spacer10>
+    <banner-3>
+      <container>
+        <heading>Banner (type 3) - heading</heading>
+        <buttonrow>
+          <a href="https://www.w3schools.com" type="button" varient="light">Button</a>
+        </buttonrow>
+      </container>
+    </banner-3>
+    <spacer10></spacer10>
     <buttonrow>
-      <a href="https://www.w3schools.com" type="button" varient="light">Button</a>
+      <a href="https://www.w3schools.com" type="button" varient="dark">Button</a>
+      <a href="https://www.w3schools.com" type="button" varient="dark">Longer Button</a>
     </buttonrow>
-  </container>
-</banner-3>
-<spacer10></spacer10>
-<buttonrow>
-  <a href="https://www.w3schools.com" type="button" varient="dark">Button</a>
-  <a href="https://www.w3schools.com" type="button" varient="dark">Longer Button</a>
-</buttonrow>
-<spacer10></spacer10>
-<content-strip-2>
-  <container>
-    <title>Strip (type 2) - title</title>
-    <p>this strip starts with a subheading and can contain content like paragraphs and buttons - p</p>
-    <buttonrow>
-      <a href="https://www.w3schools.com" type="button" varient="light">Button</a>
-      <a href="https://www.w3schools.com" type="button" varient="light">Click here</a>
-    </buttonrow>
-  </container>
-</content-strip-2>
+    <spacer10></spacer10>
+    <content-strip-2>
+      <container>
+        <heading>Strip (type 2) - heading</heading>
+        <p>this strip starts with a subheading and can contain content like paragraphs and buttons - p</p>
+        <buttonrow>
+          <a href="https://www.w3schools.com" type="button" varient="light">Button</a>
+          <a href="https://www.w3schools.com" type="button" varient="light">Click here</a>
+        </buttonrow>
+      </container>
+    </content-strip-2>
+
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+    <p>h</p>
+
+    <p>h</p>
+
+  </body>
+</html>
