--- a/pinestraw.html
+++ b/pinestraw.html
@@ -6,7 +6,8 @@
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   </head>
+  </style>
   <body>
-    <iframe src="https://www.troop370atlanta.org/pinestraw" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+    <iframe src="https://www.troop370atlanta.org/pinestraw" style="border:0px #ffffff none;height:calc(100% - 112px); name="myiFrame" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
   </body>
 </html>
