--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -38,6 +38,13 @@
       </container>
     </banner-2>
     <spacer10></spacer10>
+    <banner-2>
+      <container>
+        <heading>Banner (type 2) - heading</heading>
+        <p>subtitle</p>
+      </container>
+    </banner-2>
+    <spacer10></spacer10>
     <banner-3>
       <container>
         <heading>Banner (type 3) - heading</heading>
@@ -54,14 +61,27 @@
     <spacer10></spacer10>
     <content-strip-2>
       <container>
-        <heading>Strip (type 2) - heading</heading>
-        <p>this strip starts with a subheading and can contain content like paragraphs and buttons - p</p>
-        <buttonrow>
-          <a href="https://www.w3schools.com" type="button" varient="light">Button</a>
-          <a href="https://www.w3schools.com" type="button" varient="light">Click here</a>
-        </buttonrow>
+        <heading>Strip (type 2) - heading 2nd</heading>
+        <p>this strip starts with a second level heading and can contain content like paragraphs and buttons - p</p>
       </container>
     </content-strip-2>
+    <content-strip-1>
+      <container>
+        <heading>Strip (type 1) - heading </heading>
+        <p>this strip starts with a heading and can contain content like paragraphs and buttons - p</p>
+      </container>
+    </content-strip-1>
+    <content-strip-3>
+      <container>
+        <heading>Strip (type 3) - heading 3rd ONLY</heading>
+      </container>
+    </content-strip-3>
+    <content-strip-4>
+      <container>
+        <heading>Scouting Bridges: Uganda – East Africa</heading>
+        <p>this strip starts with a thrid level heading and can contain content like paragraphs and buttons - p</p>
+      </container>
+    </content-strip-4>
 
     <p>h</p>
     <p>h</p>
