--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -1,6 +1,6 @@
 </html>
   <head>
-    <meta charset='UTF-8'>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Camps/High Adventure</title>
     <link rel='stylesheet' href='styles/components.css'>
     <link rel='stylesheet' href='styles/page-specific.css'>
