--- a/pinestraw.html
+++ b/pinestraw.html
@@ -1,6 +1,6 @@
 </html>
   <head>
-    <meta charset='UTF-8'>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Payments</title>
     <link rel='stylesheet' href='styles/components.css'>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
