remove specific text

--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -1,5 +1,6 @@
 </html>
   <head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Content Test Page</title>
     <link rel="stylesheet" href="components.css">
   </head>
@@ -78,7 +79,7 @@
     </content-strip-3>
     <content-strip-4>
       <container>
-        <heading>Scouting Bridges: Uganda – East Africa</heading>
+        <heading>Strip (type 4) - heading 3rd</heading>
         <p>this strip starts with a thrid level heading and can contain content like paragraphs and buttons - p</p>
       </container>
     </content-strip-4>
