--- a/payments.html
+++ b/payments.html
@@ -3,8 +3,6 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Payments</title>
     <link rel='stylesheet' href='styles/components.css'>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   </head>
   <body>
 
@@ -44,5 +42,13 @@
         </buttonrow>
       </container>
     </content-strip-2>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
+  <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
+  <script type="text/javascript">
+  	$(".button-collapse").sideNav();
+  </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
+  <div class="hiddendiv common"></div>
   </body>
 </html>
