carousel banner images and info

--- a/index.html
+++ b/index.html
@@ -5,36 +5,46 @@
   <link rel='stylesheet' href='styles/components.css'>
   <link rel='stylesheet' href='styles/page-specific.css'>
   <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
+  <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
 </head>
 
 <body>
   <carousel>
     <container>
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
-        <div class="carousel-cell">
+        <div class="carousel-cell" id="card1">
           <div class="carousel-text-card">
             <div>
-              <h2 class="carousel-title">Title 1</h2>
-              <p class="carousel-info">Info</p>
-              <a href="#" type="button" varient="light">Button</a>
+              <h2 class="carousel-title">High Adventure</h2>
+              <p class="carousel-info">2019</p>
+              <a href="" type="button" varient="light">Learn More</a>
             </div>
           </div>
         </div>
-        <div class="carousel-cell">
+        <div class="carousel-cell" id="card2">
           <div class="carousel-text-card">
             <div>
-              <h2 class="carousel-title">Title 2</h2>
-              <p class="carousel-info">Info</p>
-              <a href="#" type="button" varient="light">Button</a>
+              <h2 class="carousel-title">Backpacking: Siler Bald</h2>
+              <p class="carousel-info">October 20-21</p>
+              <a href="#" type="button" varient="light">Sign Up</a>
             </div>
           </div>
         </div>
-        <div class="carousel-cell">
+        <div class="carousel-cell" id="card3">
           <div class="carousel-text-card">
             <div>
-              <h2 class="carousel-title">Title 3</h2>
-              <p class="carousel-info">Info</p>
-              <a href="#" type="button" varient="light">Button</a>
+              <h2 class="carousel-title">Okpik Winter Adventure</h2>
+              <p class="carousel-info">February 14-18</p>
+              <a href="#" type="button" varient="light">Sign Up</a>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-cell" id="card4">
+          <div class="carousel-text-card">
+            <div>
+              <h2 class="carousel-title">Winter Camp</h2>
+              <p class="carousel-info">December 27-31</p>
+              <a href="#" type="button" varient="light">Sign Up</a>
             </div>
           </div>
         </div>
@@ -55,7 +65,6 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
-<script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
 <script type="text/javascript">
 	$(".button-collapse").sideNav();
 </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
