--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             </div>
           </div>
         </div>
+        <div class="carousel-cell" id="card5">
+          <div class="carousel-text-card">
+            <div>
+              <h2 class="carousel-title">Pine Straw Sale</h2>
+              <p class="carousel-info">November 3, 2018</p>
+              <a href="#" type="button" varient="light">Order</a>
+            </div>
+          </div>
+        </div>
       </div>
     </container>
   </carousel>
