optimize css to require fewer rules & separate topnav css into separate file

--- a/index.html
+++ b/index.html
@@ -61,16 +61,15 @@
       </div>
     </container>
   </carousel>
-  <banner-3 class="extra-padding-y">
+  <banner class="extra-padding-y">
     <container>
-      <heading>Welcome to Troop 370</heading>
-      <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men
-        following the aims and ideals of the Boy Scouts of America movement.</p>
+      <h3-8>Welcome to Troop 370</h3-8>
+      <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
       <buttonrow>
-        <a href="https://www.w3schools.com" type="button" varient="light" class="bigger">Button</a>
+        <a href="https://www.w3schools.com" type="button" varient="light" class="bigger">Learn more</a>
       </buttonrow>
     </container>
-  </banner-3>
+  </banner>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
