--- a/styles/content-test-page.html
+++ b/styles/content-test-page.html
@@ -26,38 +26,43 @@
         </ul>
       </container>
     </topnav>
-    <banner-1>
+    <banner>
       <container>
-        <heading>Banner (type 1) - heading</heading>
-      </container>
-    </banner-1>
-    <spacer10></spacer10>
-    <banner-2>
-      <container>
-        <heading>Banner (type 2) - heading</heading>
+        <h3-8>Banner</h3-8>
         <subtitle>subtitle</subtitle>
-      </container>
-    </banner-2>
-    <spacer10></spacer10>
-    <banner-2>
-      <container>
-        <heading>Banner (type 2) - heading</heading>
-        <p>subtitle</p>
-      </container>
-    </banner-2>
-    <spacer10></spacer10>
-    <banner-3>
-      <container>
-        <heading>Banner (type 3) - heading</heading>
         <buttonrow>
-          <a href="https://www.w3schools.com" type="button" varient="light">Button</a>
+          <a href="#" type="button" varient="light">Button</a>
         </buttonrow>
       </container>
-    </banner-3>
+    </banner>
+    <content-strip>
+      <container>
+        <h3-8>Strip h3-8</h3-8>
+        <subtitle>This is a subtitle element.</subtitle>
+        <p>This is a paragraph element.</p>
+        <buttonrow>
+          <a href="#" type="button" varient="dark">Button</a>
+        </buttonrow>
+      </container>
+    </content-strip>
+    <content-strip>
+      <container>
+        <h4>Strip h4</h4>
+        <buttonrow>
+          <a href="#" type="button" varient="dark">Button</a>
+        </buttonrow>
+      </container>
+    </content-strip>
+    <content-strip>
+      <container>
+        <h5>Strip h5</h5>
+        <subtitle>This is a subtitle element.</subtitle>
+      </container>
+    </content-strip>
     <spacer10></spacer10>
     <buttonrow>
-      <a href="https://www.w3schools.com" type="button" varient="dark">Button</a>
-      <a href="https://www.w3schools.com" type="button" varient="dark">Longer Button</a>
+      <a href="#" type="button" varient="dark">Button</a>
+      <a href="#" type="button" varient="dark">Longer Button</a>
     </buttonrow>
     <spacer10></spacer10>
     <content-strip-2>
