correct learn more href

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel='stylesheet' href='styles/components.css'>
   <link rel='stylesheet' href='styles/page-specific.css'>
   <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.css">
   <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
   <link rel="manifest" href="/manifest.webmanifest">
 </head>
@@ -66,7 +67,7 @@
       <h3-8>Welcome to Troop 370</h3-8>
       <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
       <buttonrow>
-        <a href="https://www.w3schools.com" type="button" varient="light" class="bigger">Learn more</a>
+        <a href="/about.html" type="button" varient="light" class="bigger">Learn more</a>
       </buttonrow>
     </container>
   </banner>
