--- a/index.html
+++ b/index.html
@@ -70,6 +70,51 @@
       </buttonrow>
     </container>
   </banner>
+  <carousel>
+    <container>
+      <div class="img-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "wrapAround": true, "autoPlay": 4000 }'>
+        <div class="carousel-cell" id="imgcard1"></div>
+        <div class="carousel-cell" id="imgcard2"></div>
+        <div class="carousel-cell" id="imgcard3"></div>
+        <div class="carousel-cell" id="imgcard4"></div>
+        <div class="carousel-cell" id="imgcard5"></div>
+        <div class="carousel-cell" id="imgcard6"></div>
+        <div class="carousel-cell" id="imgcard7"></div>
+        <div class="carousel-cell" id="imgcard8"></div>
+        <div class="carousel-cell" id="imgcard9"></div>
+        <div class="carousel-cell" id="imgcard10"></div>
+        <div class="carousel-cell" id="imgcard11"></div>
+        <div class="carousel-cell" id="imgcard12"></div>
+        <div class="carousel-cell" id="imgcard13"></div>
+        <div class="carousel-cell" id="imgcard14"></div>
+        <div class="carousel-cell" id="imgcard15"></div>
+        <div class="carousel-cell" id="imgcard16"></div>
+        <div class="carousel-cell" id="imgcard17"></div>
+        <div class="carousel-cell" id="imgcard18"></div>
+        <div class="carousel-cell" id="imgcard19"></div>
+        <div class="carousel-cell" id="imgcard20"></div>
+        <div class="carousel-cell" id="imgcard21"></div>
+        <div class="carousel-cell" id="imgcard22"></div>
+        <div class="carousel-cell" id="imgcard23"></div>
+        <div class="carousel-cell" id="imgcard24"></div>
+        <div class="carousel-cell" id="imgcard25"></div>
+        <div class="carousel-cell" id="imgcard26"></div>
+        <div class="carousel-cell" id="imgcard27"></div>
+        <div class="carousel-cell" id="imgcard28"></div>
+        <div class="carousel-cell" id="imgcard29"></div>
+        <div class="carousel-cell" id="imgcard30"></div>
+        <div class="carousel-cell" id="imgcard31"></div>
+        <div class="carousel-cell" id="imgcard32"></div>
+      </div>
+    </container>
+  </carousel>
+  <banner class="extra-padding-y red" id="time-banner">
+    <container>
+      <img id="meeting-icon" src="src/icons/meeting icon.png">
+      <h3-8>Weekly Meetings</h3-8>
+      <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
+    </container>
+  </banner>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
