topnav on small displays (mobile) displays page title name instead of site name
This makes it feel more like a native app

--- a/index.html
+++ b/index.html
@@ -123,5 +123,10 @@
 	$(".button-collapse").sideNav();
 </script><div class="drag-target" data-sidenav="slide-out" style="left: 0px; touch-action: pan-y;"></div>
 <div class="hiddendiv common"></div>
+<script>
+$(document).ready(function(){
+  $(".mobile-appbar-title").text("Boy Scout Troop 370");
+});
+</script>
 </body>
 </html>
