foarms and documents files

--- a/forms-documents.html
+++ b/forms-documents.html
@@ -19,48 +19,48 @@
         <div class="split50">
           <div>
             <h4>Applications</h4>
-            <p><a href="">Merit Badge Counselor Application</a></p>
+            <p><a href="src/documents/Merit Badge Counselor Application.pdf">Merit Badge Counselor Application</a></p>
             <p><a href="https://www.scouting.org/resources/info-center/forms/">BSA Membership Forms</a></p>
-            <p><a href="">Youth Application Instructions</a></p>
-            <p><a href="">Adult Application Instructions</a></p>
+            <p><a href="src/documents/Youth Application Instructions.pdf">Youth Application Instructions</a></p>
+            <p><a href="src/documents/Adult Application Instructions.pdf">Adult Application Instructions</a></p>
           </div>
           <div>
             <h4>Health & Medical Forms</h4>
-            <p><a href="">Parts A, B, and C</a></p>
-            <p><a href="">Part D (Only for High Adventure)</a></p>
+            <p><a href="src/documents/Parts A, B, and C.pdf">Parts A, B, and C</a></p>
+            <p><a href="src/documents/Part D.pdf">Part D (Only for High Adventure)</a></p>
             <p><a href="https://www.scouting.org/health-and-safety/ahmr/">BSA Health & Safety Page</a></p>
           </div>
           <div>
             <h4>Additional Documents</h4>
-            <p><a href="">Troop Resource Survey</a></p>
-            <p><a href="">New Parent Handbook</a></p>
-            <p><a href="">Guidelines for Positions of Leadership</a></p>
-            <p><a href="">MSR Whisperlite International Instructions</a></p>
-            <p><a href="">MSR Whisperlite Universal Instructions</a></p>
+            <p><a href="src/documents/Troop Resource Survey.pdf">Troop Resource Survey</a></p>
+            <p><a href="src/documents/New Parent Handbook.pdf">New Parent Handbook</a></p>
+            <p><a href="src/documents/Guidelines for Positions of Leadership.pdf">Guidelines for Positions of Leadership</a></p>
+            <p><a href="src/documents/MSR Whisperlite International Instructions.pdf">MSR Whisperlite International Instructions</a></p>
+            <p><a href="src/documents/MSR Whisperlite Universal Instructions.pdf">MSR Whisperlite Universal Instructions</a></p>
           </div>
         </div>
         <div class="split50">
           <div>
             <h4>Packing Lists</h4>
-            <p><a href="">Harry's Packing List</a></p>
-            <p><a href="">Harry's Packing List for Fall/Spring Backpacking</a></p>
+            <p><a href="src/documents/Harry's Packing List.pdf">Harry's Packing List</a></p>
+            <p><a href="src/documents/Harry's Packing List for FallSpring Backpacking.pdf">Harry's Packing List for Fall/Spring Backpacking</a></p>
             <p><a href="http://www.atlantabsa.org/get-ready/what-to-bring/57797">Woodruff Summer Camp Packing List</a></p>
           </div>
           <div>
             <h4>Campout Planning Forms</h4>
-            <p><a href="">Cooking Patrol Roster Sheet (Yellow Sheet)</a></p>
-            <p><a href="">Campout Planning Form</a></p>
-            <p><a href="">Meal Planning Guidebook</a></p>
-            <p><a href="">Campout Agenda Outline</a></p>
-            <p><a href="">Campfire Program Planner</a></p>
-            <p><a href="">Patrol Shopper Reimbursement</a></p>
-            <p><a href="">Outdoor Ethics Guide 2017</a></p>
+            <p><a href="src/documents/Cooking Patrol Roster Sheet (Yellow Sheet).docx">Cooking Patrol Roster Sheet (Yellow Sheet)</a></p>
+            <p><a href="src/documents/Campout Planning Form.pdf">Campout Planning Form</a></p>
+            <p><a href="src/documents/Meal Planning Guidebook.pdf">Meal Planning Guidebook</a></p>
+            <p><a href="src/documents/Campout Agenda Outline.docx">Campout Agenda Outline</a></p>
+            <p><a href="src/documents/Campfie Program Planner.pdf">Campfire Program Planner</a></p>
+            <p><a href="src/documents/Patrol Shopper Reimbursement.pdf">Patrol Shopper Reimbursement</a></p>
+            <p><a href="src/documents/Outdoor Ethics Guide 2017.pdf">Outdoor Ethics Guide 2017</a></p>
           </div>
           <div>
             <h4>Patrol Uniform Inspection</h4>
-            <p><a href="">Patrol Uniform Inspection Form</a></p>
-            <p><a href="">Example Form</a></p>
-            <p><a href="">How Scores Are Calculated</a></p>
+            <p><a href="src/documents/[Blank]Patrol.docx">Patrol Uniform Inspection Form</a></p>
+            <p><a href="src/documents/[Example]Patrol.docx">Example Form</a></p>
+            <p><a href="src/documents/How Scores Are Calculated.docx">How Scores Are Calculated</a></p>
           </div>
         </div>
 
