submission sent page

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,8 @@
               </div>
             </div>
             <button class="btn waves-effect waves-light contact-submit-button" type="submit" name="action">Submit</button>
-            <input type="hidden" name="_next" value="//site.io/thanks.html" />
+            <input type="hidden" name="_next" value="submission-received.html#contact" />
+            <input type="hidden" name="_format" value="plain" />
           </form>
         </div>
       </container>
