--- a/contact-webmaster.html
+++ b/contact-webmaster.html
@@ -9,17 +9,12 @@
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
-    <banner>
-      <container>
-        <h3-8>Contact</h3-8>
-        <p>If you need the members area password or have an issues with the website, use this form: <a href="contact-webmaster.html#contact">Contact Webmaster</a>.<br><br>Otherwise, use the General Contact form below</p>
-      </container>
-    </banner>
     <content-strip>
       <container>
-        <h3-8>General Contact</h3-8>
+        <h3-8>Contact Webmaster</h3-8>
+        <subtitle>Jack Buehner</subtitle>
         <div class="row">
-          <form class="col s12" name="contact-general" method="POST" action="https://formspree.io/jackebuehner@gmail.com">
+          <form class="col s12" name="contact-webmaster" method="POST" action="https://formspree.io/jackebuehner@gmail.com">
             <div class="row">
               <div class="input-field col s6">
                 <input id="first_name" type="text" class="validate" name="First_Name" required>
@@ -36,10 +31,6 @@
                 <label for="email">Email</label>
               </div>
               <div class="input-field col s6 s6-spread">
-                <input id="subject" type="text" class="validate" name="Phone">
-                <label for="subject">Phone</label>
-              </div>
-              <div class="input-field col s12">
                 <input id="subject" type="text" class="validate" name="_subject">
                 <label for="subject">Subject</label>
               </div>
