hide title on mobile

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <body>
     <banner>
       <container>
-        <h3-8>Contact</h3-8>
+        <h3-8 class="hide-mobile" >Contact</h3-8>
         <p>If you need the members area password or have an issues with the website, use this form: <a href="contact-webmaster.html#contact">Contact Webmaster</a>.<br><br>Otherwise, use the General Contact form below</p>
       </container>
     </banner>
