--- a/payments.html
+++ b/payments.html
@@ -7,7 +7,7 @@
   <body>
     <banner>
       <container>
-        <h3-8>Payments</h3-8>
+        <h3-8 class="hide-mobile">Payments</h3-8>
         <subtitle>Choose one of the payment options below to pay for Troop 370 events</subtitle>
       </container>
     </banner>
