remove old manifest; link to new manifest

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel='stylesheet' href='styles/page-specific.css'>
   <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
   <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -115,7 +115,18 @@
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
     </container>
   </banner>
-
+<script>
+  // Register the service worker
+  if ('serviceWorker' in navigator) {
+  	navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+  }).catch(function(err) {
+      // registration failed :(
+      	console.log('ServiceWorker registration failed: ', err);
+      });
+  }
+</script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
