remove / & no scope

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </banner>
 <script>
   if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('/service-worker.js', {scope: '/'})
+    navigator.serviceWorker.register('service-worker.js')
   }
 </script>
 <!--<script>
