--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -57,7 +57,7 @@
         <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign up at <a href="meritbadge.info">meritbadge.info</a><br>&#8193;&#8193;Summer Merit Badge Clinic - August 18, 2018<br>&#8193;&#8193;Winter Merit Badge Clinic – February 9, 2019 (Part of Scout Weekend)</p>
       </container>
     </content-strip>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
   <script type="text/javascript">
