--- a/faqs.html
+++ b/faqs.html
@@ -56,7 +56,7 @@
         <p>Troop 370 has a well-stocked Quartermaster closet with backpacks, tents, cooking stoves, and cooking utensils. If you need an item, talk to a Quartermaster, and he will help you checkout any camping gear you need.<br><br>If you think you are going to need something over and over again, it might be wise to buy one yourself. REI, Cabelas, and High Country Outfitters are all good stores for camping equipment, but you can always talk to another Scout or adult about options or where they got theirs.  </p>
       </container>
     </content-strip>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
   <script type="text/javascript">
