--- a/helpful-links.html
+++ b/helpful-links.html
@@ -19,7 +19,7 @@
         <p><a href="https://www.rei.com/learn/expert-advice/loading-backpack.html">REI: How to pack a backpack (video)</a></p>
       </container>
     </banner>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
   <script type="text/javascript">
