--- a/index.html
+++ b/index.html
@@ -115,8 +115,18 @@
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
     </container>
   </banner>
-
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script>
+  if (navigator.serviceWorker) {
+    navigator.serviceWorker.register('service-worker.js')
+  }
+</script>
+<!--<script>
+  // register ServiceWorker, remember to use absolute path!
+  if (navigator.serviceWorker) {
+    navigator.serviceWorker.register('troop370/service-worker.js', {scope: '/troop370/'})
+  }
+</script>-->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
 <script type="text/javascript">
