--- a/payments.html
+++ b/payments.html
@@ -41,7 +41,7 @@
         </buttonrow>
       </container>
     </content-strip>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
   <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
