--- a/photos.html
+++ b/photos.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <iframe src="https://www.troop370atlanta.org/photos" style="width:100vw;height:calc(100vh - 64px);"></iframe>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
   <script type="text/javascript">
