--- a/pinestraw.html
+++ b/pinestraw.html
@@ -7,7 +7,7 @@
   </style>
   <body>
     <iframe src="https://www.troop370atlanta.org/pinestraw" style="border:0px #ffffff none;height:calc(100% - 112px); name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%"  allowfullscreen></iframe>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='scripts/insert-header-footer.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
   <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
