meta description for seo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Troop 370 - Atlanta, GA | Boy Scout Troop in Buckhead/Brookhaven/Sandy Springs area | Sponsored by St. James United Methodist Church">
   <title>Home</title>
   <link rel='stylesheet' href='styles/components.css'>
   <link rel='stylesheet' href='styles/page-specific.css'>
