meeting icon alt text

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </carousel>
   <banner class="extra-padding-y red" id="time-banner">
     <container>
-      <img id="meeting-icon" src="src/icons/meeting icon.png">
+      <img id="meeting-icon" alt="meeting-icon" src="src/icons/meeting icon.png">
       <h3-8>Weekly Meetings</h3-8>
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
     </container>
