--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h3-8>Welcome to Troop 370</h3-8>
       <p>Boy Scout Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
       <buttonrow>
-        <a href="about.html#about" type="button" varient="light" class="bigger">Learn more</a>
+        <a href="about.html#about" type="button" varient="light" class="bigger">About page</a>
       </buttonrow>
     </container>
   </banner>
