--- a/advancement.html
+++ b/advancement.html
@@ -23,7 +23,7 @@
             <h4>Merit Badge Couselors</h4>
             <p>A list of merit badge counselors and their contact information can be found in the password protected members section of our site.</p>
             <p></p>
-            <p><a href="/mb-counselors">Go to Merit Badge Counselors page</a></p>
+            <p><a href="/mb-counselors_encrypted.html">Go to Merit Badge Counselors page</a></p>
           </div>
           <div>
             <h4>Merit Badge Clinics</h4>
