links to pages in carousel

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div>
               <h2 class="carousel-title">High Adventure</h2>
               <p class="carousel-info">2019</p>
-              <a href="" type="button" varient="light">Learn More</a>
+              <a href="camps-adventure.html#tevents" type="button" varient="light">Learn More</a>
             </div>
           </div>
         </div>
@@ -28,7 +28,7 @@
             <div>
               <h2 class="carousel-title">Backpacking: Siler Bald</h2>
               <p class="carousel-info">October 20-21</p>
-              <a href="#" type="button" varient="light">Sign Up</a>
+              <a href="campout-sign-up_encrypted.html#tevents" type="button" varient="light">Sign Up</a>
             </div>
           </div>
         </div>
@@ -37,7 +37,7 @@
             <div>
               <h2 class="carousel-title">Okpik Winter Adventure</h2>
               <p class="carousel-info">February 14-18</p>
-              <a href="#" type="button" varient="light">Sign Up</a>
+              <a href="okpik-2019-sign-up_encrypted.html#tevents" type="button" varient="light">Sign Up</a>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
             <div>
               <h2 class="carousel-title">Winter Camp</h2>
               <p class="carousel-info">December 27-31</p>
-              <a href="#" type="button" varient="light">Sign Up</a>
+              <a href="winter-camp-sign-up_encrypted.html#tevents" type="button" varient="light">Sign Up</a>
             </div>
           </div>
         </div>
@@ -55,7 +55,7 @@
             <div>
               <h2 class="carousel-title">Pine Straw Sale</h2>
               <p class="carousel-info">November 3, 2018</p>
-              <a href="#" type="button" varient="light">Order</a>
+              <a href="pinestraw.html#pinestraw" type="button" varient="light">Order</a>
             </div>
           </div>
         </div>
